--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
 click==8.1.3
 colorama==0.4.5
+dnspython==2.3.0
+email-validator==1.3.1
 Flask==2.1.2
 Flask-Cors==3.0.10
+flask-mongoengine==1.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 GeoAlchemy2==0.12.1
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.4
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mongoengine==0.27.0
 packaging==21.3
-psycopg2==2.9.3
+pymongo==4.3.3
 pyparsing==3.0.9
+python-dotenv==1.0.0
 Shapely==1.8.2
 six==1.16.0
 SQLAlchemy==1.4.37
