--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mongoengine==0.27.0
+mysqlclient==2.1.1
 packaging==21.3
 pymongo==4.3.3
 pyparsing==3.0.9
